# roboscapesim-rs

./: .dockerignore  .gitignore  Caddyfile.template  Cargo.toml  Dockerfile  Dockerfile-api  Dockerfile-caddy  Dockerfile-server  LICENSE  README.md  docker-compose.yml  update_caddyfile.sh
.github/: dependabot.yml
.github/workflows/: docker-api.yml  docker-caddy.yml  docker-image.yml  docker-server.yml
roboscapesim-api/: Cargo.toml
roboscapesim-api/src/: main.rs
roboscapesim-client/: Cargo.toml  Makefile  build.rs  extra.js  index.js  usedev.js
roboscapesim-client-common/: Cargo.toml
roboscapesim-client-common/src/: api.rs  lib.rs  util.rs
roboscapesim-client/.cargo/: config
roboscapesim-client/assets/: parallax_robot.glb
roboscapesim-client/src/: api.rs  game.rs  lib.rs  ui.rs  util.rs
roboscapesim-common/: Cargo.toml
roboscapesim-common/src/: api.rs  lib.rs
roboscapesim-preflight/: Cargo.toml  Makefile  preflight.js
roboscapesim-preflight/src/: lib.rs
roboscapesim-server/: Cargo.toml  default_scenarios.json
roboscapesim-server/assets/scenarios/: Default.xml
roboscapesim-server/src/: Default Scenario.xml  api.rs  main.rs  robot.rs  room.rs  scenarios.rs  simulation.rs  socket.rs  vm.rs
roboscapesim-server/src/robot/: messages.rs  motor.rs  physics.rs
roboscapesim-server/src/room/: clients.rs  management.rs  messages.rs  metadata.rs  netsblox_api.rs  objects.rs  vm.rs
roboscapesim-server/src/services/: entity.rs  lidar.rs  mod.rs  position.rs  proximity.rs  service_struct.rs  trigger.rs  waypoint.rs  world.rs
roboscapesim-server/src/services/world/: config.rs  consts.rs  handlers.rs  util.rs
roboscapesim-server/src/util/: extra_rand.rs  mod.rs  traits.rs  util.rs
roboscapesim-testclient/: Cargo.toml
roboscapesim-testclient/src/: main.rs
