[package]
name = "roboscapesim-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-once-cell = "0.5"
axum = "0.8"
axum-macros = "0.5"
dashmap = "6.0"
futures-executor = "0.3"
log = "0.4"
once_cell = "1.19"
rand = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
roboscapesim-common = { path = "../roboscapesim-common" }
serde = "1.0"
serde_json = "1.0"
simple_logger = "5.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "timeout"] }
