[package]
name = "roboscapesim-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-once-cell = "0.5"
axum = "0.8"
axum-macros = "0.5"
dashmap = "6.0"
futures-executor = "0.3"
log = "0.4"
once_cell = "1.19"
rand = "0.9.2"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
roboscapesim-common = { path = "../roboscapesim-common" }
serde = "1.0"
serde_json = "1.0"
simple_logger = "5.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "timeout"] }
