[package]
name = "roboscapesim-client-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", 
    "Performance",
    "PerformanceTiming", 
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "HtmlDialogElement",
    "CssStyleDeclaration",
    "NodeList",
    "HtmlInputElement",
    "HtmlDataListElement"] }
roboscapesim-common = { path = "../roboscapesim-common" }
neo-babylon = "0.2.0"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
reqwest = { version = "0.12", features = ["json"] }
gloo-timers = { version = "0.3", features = ["futures"] }
rmp-serde = "1.3"
js-helpers = "0.1.6"
