[package]
name = "roboscapesim-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3"
web-sys = { version = "0.3.64", features = ["console", "Performance", "PerformanceTiming", "RtcIceCandidate", "RtcSessionDescription", "RtcSessionDescriptionInit", "RtcSdpType", "RtcIceGatheringState"] }
roboscapesim-common = { path = "../roboscapesim-common" }
neo-babylon = "0.1.7"
cyberdeck-client-web-sys = { git = 'https://github.com/gsteinLTU/cyberdeck', branch = "master" }
netsblox-extension-macro = "0.1"
netsblox-extension-util = "^0.1.4"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.37"
serde_json = "1.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }

[build-dependencies]
netsblox-extension-util = "*"
