[package]
name = "roboscapesim-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"
js-sys = "0.3"
web-sys = { version = "0.3.64", features = [
    "console", 
    "Performance",
    "PerformanceTiming", 
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "HtmlDialogElement",
    "CssStyleDeclaration",
    "NodeList",
    "HtmlInputElement",
    "HtmlDataListElement"] }
roboscapesim-common = { path = "../roboscapesim-common" }
neo-babylon = "0.1.13"
netsblox-extension-macro = "0.1"
netsblox-extension-util = "^0.1.4"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.37"
serde_json = "1.0"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
reqwest = { version = "0.11.18", features = ["serde_json", "json"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde = "1.0.189"
postcard = { version = "1.0.8", features = ["use-std"] }
rmp-serde = "1.1.2"

[build-dependencies]
netsblox-extension-util = "*"
