[package]
name = "roboscapesim-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.32", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = { version = "0.5"}
