[package]
name = "roboscapesim-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
roboscapesim-common = { path = "../roboscapesim-common" }
rapier3d = { version = "0.17", features = ["serde-serialize", "simd-stable"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0" }
serde_json = "1.0"
rand = "0.8"
axum = {version = "0.7.1"}
tower-http = { version = "0.5.0", features = ["cors"] }
dashmap = { version = "5.5", features = ["serde", "rayon", "inline"] }
once_cell = { version = "1.18", features = ["parking_lot"] }
nalgebra = { version = "0.32", features = ["serde", "serde-serialize", "rand"] }
simple_logger = "4.2"
log = "0.4"
derivative = "2.2"
iotscape = "0.4.0"
dotenvy = "0.15"
netsblox-vm = { version = "=0.3.5", default-features = false, features = ["std", "native-tls", "std-system"] }
axum-macros = "0.4.0"
reqwest = "0.11"
futures = "0.3"
rayon = "1.8"
color-name = "1.1.0"
colorsys = "0.6"
gc-arena = "0.4"
crossbeam-channel = "0.5"
async-tungstenite = { version = "0.23" }
async-std = "1.12.0"
rmp-serde = "1.1.2"
atomic-instant = "0.1.1"

[dev-dependencies]
float-cmp = "0.9"
