[package]
name = "roboscapesim-server"
version = "0.1.0"
edition = "2021"

[features]
no_deadlocks = []

[profile.dev.package.parry3d]
[profile.dev.package.rapier3d]
opt-level = 3

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
roboscapesim-common = { path = "../roboscapesim-common" }
rapier3d = { version = "0.17", features = ["serde-serialize", "simd-stable"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0" }
serde_json = "1.0"
rand = "0.8"
axum = {version = "0.7"}
tower-http = { version = "0.5", features = ["cors", "timeout"] }
dashmap = { version = "5.5", features = ["serde", "rayon", "inline"] }
once_cell = { version = "1.19", features = ["parking_lot"] }
nalgebra = { version = "0.32", features = ["serde", "serde-serialize", "rand"] }
simple_logger = "5.0"
log = "0.4"
derivative = "2.2"
iotscape = { version = "0.5.1", features = ["tokio"]}
dotenvy = "0.15"
netsblox-vm = { version = "=0.4.5", default-features = false, features = ["std", "rustls-tls-native-roots", "std-system"] }
axum-macros = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"
rayon = "1.8"
color-name = "1.1.0"
colorsys = "0.6"
gc-arena = "=0.5.3"
crossbeam-channel = "0.5"
async-tungstenite = { version = "0.26", features = ["tokio-rustls-native-certs"] }
async-std = "1.12.0"
rmp-serde = "1.3"
atomic-instant = "0.1"
no_deadlocks = "1.3"
async-listen = "0.2.1"

[dev-dependencies]
float-cmp = "0.9"
