[package]
name = "roboscapesim-server"
version = "0.1.0"
edition = "2021"

[features]
no_deadlocks = []

[profile.dev.package.parry3d]
[profile.dev.package.rapier3d]
opt-level = 3

[profile.dev]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
async-std = "1.12"
async-tungstenite = { version = "0.30", features = ["tokio-rustls-native-certs"] }
atomic-instant = "0.1"
axum = {version = "0.8"}
axum-macros = "0.5"
color-name = "1.1.0"
colorsys = "0.6"
crossbeam-channel = "0.5"
dashmap = { version = "6.0", features = ["serde", "rayon", "inline"] }
derivative = "2.2"
dotenvy = "0.15"
async-listen = "0.2.1"
futures = "0.3"
gc-arena = "=0.5.3"
iotscape = { version = "=0.5.6", features = ["tokio"]}
log = "0.4"
netsblox-vm = { version = "=0.4.5", default-features = false, features = ["std", "rustls-tls-native-roots", "std-system"] }
nalgebra = { version = "0.32", features = ["serde", "serde-serialize", "rand"] }
no_deadlocks = "1.3"
once_cell = { version = "1.19", features = ["parking_lot"] }
serde = { version = "1.0" }
serde_json = "1.0"
simple_logger = "5.0"
rand = "0.8"
rapier3d = { version = "=0.17.2", features = ["serde-serialize", "simd-stable"] }
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1.3"
roboscapesim-common = { path = "../roboscapesim-common" }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "timeout"] }

[dev-dependencies]
float-cmp = "0.10"
