[package]
name = "roboscapesim-testclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboscapesim-common = { path = "../roboscapesim-common" }
clap = { version = "4.4.7", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
rmp-serde = "1.1.2"
simple_logger = "4.2.0"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.23.0", features = ["tokio-native-tls", "tokio-runtime"] }
serde = { version = "1.0.190", features = ["derive"] }
log = "0.4.20"
futures = "0.3.29"
dashmap = "5.5.3"
serde_json = "1.0.108"
