[package]
name = "roboscapesim-testclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roboscapesim-common = { path = "../roboscapesim-common" }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = [ "json"] }
rmp-serde = "1.3"
simple_logger = "5.0"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.27.0", features = ["tokio-native-tls", "tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
futures = "0.3"
dashmap = "6.0.1"
serde_json = "1.0"
